// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS Plugin can ignore missing assets 1`] = `
Object {
  "diagnostics": Array [],
  "entry": "/index.css",
  "files": Object {
    "/index.css": Object {
      "content": "@import 'missing-file.css'",
    },
  },
}
`;

exports[`CSS Plugin should for work for this complex example of all the things 1`] = `
Object {
  "diagnostics": Array [],
  "entry": "different-base/index.html",
  "files": Object {
    "different-base/found-image.gif": Object {
      "content": "ok",
    },
    "different-base/index.html": Object {
      "content": "
            <html>
              <head>
                <style>
                  body {
                    background: url('https://useparcel.com/background.png');
                  }

                  div {
                    background-image: url('different-base/found-image.gif');
                  }

                  @import 'different-base/style.css';
                </style>
              </head>
              <body>
                body
              </body>
            </html>
          ",
    },
    "different-base/style.css": Object {
      "content": "
            @import 'https://useparcel.com/reset.css';
          ",
    },
  },
}
`;

exports[`CSS Plugin should ignore absolute urls 1`] = `
Object {
  "diagnostics": Array [],
  "entry": "/index.html",
  "files": Object {
    "/index.html": Object {
      "content": "
            <html>
              <head>
                <style>
                  body {
                    background: url('https://useparcel.com/background.png');
                  }
                </style>
                <link rel=\\"stylesheet\\" href=\\"/style.css\\">
              </head>
              <body>
                body
              </body>
            </html>
          ",
    },
    "/style.css": Object {
      "content": "
            @import 'https://useparcel.com/reset.css';
          ",
    },
  },
}
`;
